[project]
name = "genesis-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genesis-world",
    "rsl-rl-lib==2.2.4",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
]

[tool.uv.sources]
genesis-world = { git = "https://github.com/Genesis-Embodied-AI/Genesis" }
